; ModuleID = '/home/carl/AnghaBench/h2o/deps/hiredis/extr_test.c_disconnect.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/hiredis/extr_test.c_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [9 x i8] c"SELECT 9\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"FLUSHDB\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @disconnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @disconnect(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = call i32* @redisCommand(i32* %7, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  store i32* %8, i32** %6, align 8
  %9 = load i32*, i32** %6, align 8
  %10 = icmp ne i32* %9, null
  %11 = zext i1 %10 to i32
  %12 = call i32 @assert(i32 %11)
  %13 = load i32*, i32** %6, align 8
  %14 = call i32 @freeReplyObject(i32* %13)
  %15 = load i32*, i32** %4, align 8
  %16 = call i32* @redisCommand(i32* %15, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  store i32* %16, i32** %6, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = icmp ne i32* %17, null
  %19 = zext i1 %18 to i32
  %20 = call i32 @assert(i32 %19)
  %21 = load i32*, i32** %6, align 8
  %22 = call i32 @freeReplyObject(i32* %21)
  %23 = load i32, i32* %5, align 4
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %28

25:                                               ; preds = %2
  %26 = load i32*, i32** %4, align 8
  %27 = call i32 @redisFreeKeepFd(i32* %26)
  store i32 %27, i32* %3, align 4
  br label %31

28:                                               ; preds = %2
  %29 = load i32*, i32** %4, align 8
  %30 = call i32 @redisFree(i32* %29)
  store i32 -1, i32* %3, align 4
  br label %31

31:                                               ; preds = %28, %25
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32* @redisCommand(i32*, i8*) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @freeReplyObject(i32*) #1

declare dso_local i32 @redisFreeKeepFd(i32*) #1

declare dso_local i32 @redisFree(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
